# Flask_ai_lawyer

./: .gitignore  forms.py  main.py  pyproject.toml  system.py
database/: connect.py  models.py
database/mongo_db/: mongo_connect.py
database/sql_db/: connect.py  models.py
static/: main.css
templates/: confirm_email.html  home.html  layout.html  login.html  register.html  room.html  user_posts.html
templates/chat/: chat_layout.html  room.html
templates/email/: confirm_email.html  confirm_email.txt  reset_password.html  reset_password.txt
