[tool.poetry]
name = "flask-ai-lawyer"
version = "0.1.0"
description = ""
authors = ["AndrewCheUA <andreicheban@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.1"
flask-login = "^0.6.3"
flask-jwt-extended = "^4.6.0"
flask-mail = "^0.9.1"
flask-bcrypt = "^1.0.1"
pillow = "^10.2.0"
sqlalchemy = "^2.0.25"
python-dotenv = "^1.0.1"
flask-wtf = "^1.2.1"
alembic = "^1.13.1"
psycopg2 = "^2.9.9"
email-validator = "^2.1.0.post1"
flask-socketio = "^5.3.6"
transformers = "^4.37.1"
pymongo = "^4.6.1"
spacy = "^3.7.2"
langchain = "^0.1.4"
gensim = "^4.3.2"
nltk = "^3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
